name: quorum-aws
version: 0.0.1
synopsis: Utilities to launch and test Quorum clusters on AWS
license: Apache
license-file: LICENSE.md
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    QuorumTools.Mains.AwsBootstrap
    QuorumTools.Mains.AwsSpam
  other-modules:
    QuorumTools.Aws
  build-depends:
    base         >= 4.7 && < 5,
    containers   == 0.5.*,
    lens         == 4.14.* || == 4.15.*,
    mtl          == 2.2.*,
    quorum-tools >= 0.0.1,
    rate-limit   == 1.1.*,
    time-units   == 1.0.*,
    turtle       == 1.3.*
  default-language: Haskell2010

executable aws-spam
  hs-source-dirs:      app
  main-is:             AwsSpam.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, quorum-aws
  default-language:    Haskell2010

executable aws-bootstrap
  hs-source-dirs:      app
  main-is:             AwsBootstrap.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, quorum-aws
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jpmorganchase/quorum-aws.git
